# kSVD-Image-Denoising

./: CMakeLists.txt  README  README.md  bmp.h  config.h  denoise.cpp  denoise.h  kSVD.cpp  kSVD.h  main.cpp  omp.cpp  test.cpp  utilities.cpp  utilities.h
dictionarylearningbox/: kSVD.cpp
dictionarylearningbox/kSVD/: .kSVD.cpp.swp  .kSVD.h.swp  kSVD.cpp  kSVD.h
sparsecodingbox/: bmp.cpp  omp.cpp  omp.h  omp_v1.cpp
utilities/: .utilities.h.swp  add_noise_to_image.cpp  computePSNR.cpp  conmpute_variance.cpp  get_seconds.cpp  img2patches.cpp  inner_product.cpp  l2norm_vec.cpp  mat2vector_v1.cpp  matrix_multiply.cpp  mmul_cublas.cu  mvmul_cublas.cu  normalize_matrix_norml2.cpp  normalize_matrix_range.cpp  patches2img.cpp  readimage.cpp  show_dictionary.cpp  utilities.h  vector2mat_v1.cpp
